# design_patterns

./: Cargo.toml
src/: main.rs
src/patterns/: mod.rs
src/patterns/behavioral/: mod.rs
src/patterns/behavioral/chain_of_responsibility/: candle.rs  chart.rs  event_handler.rs  grid.rs  mod.rs  point.rs
src/patterns/behavioral/command/: abstract_command.rs  buy_command.rs  dispatcher.rs  mod.rs  sell_command.rs
src/patterns/behavioral/interpreter/: abstract_expression.rs  context.rs  mask.rs  mod.rs  nonterminal_expression.rs  price.rs  terminal_expression.rs
src/patterns/behavioral/iterator/: abstract_item.rs  abstract_iterator.rs  abstract_list.rs  item_type.rs  mod.rs  scripts.rs
src/patterns/behavioral/mediator/: abstract_object.rs  mod.rs  object_manager.rs
src/patterns/behavioral/memento/: memento_portfolio.rs  mod.rs  target_portfolio.rs
src/patterns/behavioral/observer/: abstract_observer.rs  abstract_subject.rs  bot.rs  mod.rs  portfolio.rs  shares.rs
src/patterns/behavioral/state/: abstract_state.rs  mod.rs  random_trading_strategy.rs
src/patterns/behavioral/strategy/: abstract_strategy.rs  mod.rs  prices.rs
src/patterns/behavioral/template_method/: abstract_chart.rs  mod.rs
src/patterns/behavioral/visitor/: abstract_element.rs  abstract_visitor.rs  mod.rs
src/patterns/creational/: mod.rs
src/patterns/creational/abstract_factory/: mod.rs
src/patterns/creational/builder/: abstract_converter.rs  mod.rs  price_manager.rs
src/patterns/creational/factory_method/: abstract_widget.rs  mod.rs
src/patterns/structural/: mod.rs
(+103 files in other folders)
