[package]
name = "dp"
version = "0.1.0"
edition = "2021"

# [profile.release]
# opt-level = 0
# debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "0.20.2"
confy = "0.4.0" # upgrade to 0.5.1
home = "0.5.4"
serde = "1.0.152"
